初期ファイル構成の作成とGitHub Pages用の設定

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>Kids Activity Finder</h1>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/sw.js')
+            navigator.serviceWorker.register('/kids-activity-finder/sw.js')
                 .then(registration => {
                     console.log('ServiceWorker registration successful');
                 })
