--- a/index.html
+++ b/index.html
@@ -246,30 +246,15 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-gray-800 text-white py-8 mt-16">
+    <footer class="bg-gray-100 py-8 mt-12">
         <div class="container mx-auto px-4">
-            <div class="grid md:grid-cols-3 gap-8">
-                <div>
-                    <h3 class="text-lg font-bold mb-4">子供の習い事診断 Pro</h3>
-                    <p class="text-gray-300">科学的アプローチでお子様の可能性を発見し、最適な習い事をご提案します。</p>
-                </div>
-                <div>
-                    <h3 class="text-lg font-bold mb-4">リンク</h3>
-                    <ul class="space-y-2 text-gray-300">
-                        <li><a href="#" class="hover:text-white">プライバシーポリシー</a></li>
-                        <li><a href="#" class="hover:text-white">免責事項</a></li>
-                        <li><a href="#" class="hover:text-white">お問い合わせ</a></li>
-                    </ul>
-                </div>
-                <div>
-                    <h3 class="text-lg font-bold mb-4">フォローする</h3>
-                    <a href="https://x.com/appadaycreator" class="text-blue-400 hover:text-blue-300">
-                        <i class="fab fa-twitter mr-2"></i>@appadaycreator
-                    </a>
-                </div>
+            <div class="flex flex-wrap justify-center space-x-6 text-sm text-gray-600">
+                <a href="privacy-policy.html" class="hover:text-blue-600">プライバシーポリシー</a>
+                <a href="disclaimer.html" class="hover:text-blue-600">免責事項</a>
+                <a href="contact.html" class="hover:text-blue-600">お問い合わせ</a>
             </div>
-            <div class="border-t border-gray-700 mt-8 pt-4 text-center text-gray-400">
-                <p>&copy; 2025 App a Day Creator. All rights reserved.</p>
+            <div class="text-center mt-4 text-sm text-gray-500">
+                &copy; 2024 Kids Activity Finder. All rights reserved.
             </div>
         </div>
     </footer>
