Add affiliate links and new activities

--- a/index.html
+++ b/index.html
@@ -725,7 +725,17 @@
                 traits: ['physical', 'gentle'],
                 difficulty: 'easy',
                 continuity_rate: 80,
-                future_potential: 'medium'
+                future_potential: 'medium',
+                affiliateBanners: [
+                    {
+                        title: '日本ベビーヨガ協会',
+                        description: '親子で楽しめるベビーヨガプログラム',
+                        imageUrl: 'https://via.placeholder.com/300x150/fbbf24/white?text=ベビーヨガ協会',
+                        affiliateUrl: 'https://babyyoga.jp/',
+                        price: '1回2,000円〜',
+                        features: ['初心者歓迎', 'オンライン対応', '資格取得講座']
+                    }
+                ]
             },
             baby_music: {
                 name: 'ベビーリトミック',
@@ -763,7 +773,17 @@
                 traits: ['physical', 'kinesthetic'],
                 difficulty: 'medium',
                 continuity_rate: 80,
-                future_potential: 'high'
+                future_potential: 'high',
+                affiliateBanners: [
+                    {
+                        title: 'JACPA 幼児体操教室',
+                        description: '全国展開の子供向け体操スクール',
+                        imageUrl: 'https://via.placeholder.com/300x150/34d399/white?text=JACPA',
+                        affiliateUrl: 'https://www.jacpa.co.jp/',
+                        price: '月額7,000円〜',
+                        features: ['専門コーチ', '体験レッスン', '大会参加']
+                    }
+                ]
             },
             sensory_play: {
                 name: '感覚遊び教室',
@@ -777,7 +797,17 @@
                 traits: ['sensory', 'curious'],
                 difficulty: 'easy',
                 continuity_rate: 85,
-                future_potential: 'medium'
+                future_potential: 'medium',
+                affiliateBanners: [
+                    {
+                        title: 'ベビーパーク',
+                        description: '0〜3歳向け親子教室',
+                        imageUrl: 'https://via.placeholder.com/300x150/60a5fa/white?text=ベビーパーク',
+                        affiliateUrl: 'https://babypark.jp/',
+                        price: '月額8,800円〜',
+                        features: ['知育遊び', '少人数制', '体験レッスン']
+                    }
+                ]
             },
             parent_child_cooking: {
                 name: '親子クッキング',
@@ -863,7 +893,17 @@
                 traits: ['creative', 'sensitive'],
                 difficulty: 'medium',
                 continuity_rate: 80,
-                future_potential: 'high'
+                future_potential: 'high',
+                affiliateBanners: [
+                    {
+                        title: '日本シュタイナー学校協会',
+                        description: '全国のシュタイナー教育情報',
+                        imageUrl: 'https://via.placeholder.com/300x150/7c3aed/white?text=シュタイナー',
+                        affiliateUrl: 'https://www.waldorf.or.jp/',
+                        price: '月額10,000円〜',
+                        features: ['芸術教育', '少人数制', '体験入学']
+                    }
+                ]
             },
             forest_kindergarten: {
                 name: '森のようちえん',
@@ -1200,6 +1240,30 @@
                         affiliateUrl: "https://www.makeblock.com/",
                         price: "月額12,000円〜",
                         features: ["教材キット", "プロ講師", "大会参加"]
+                    }
+                ],
+            },
+            three_d_printing: {
+                name: '3Dプリンティング',
+                description: '3Dプリンタを使ったものづくり体験',
+                category: 'technology',
+                icon: 'fas fa-print',
+                benefits: ['設計力', '創造力', '技術力', '未来性'],
+                cost: '月額10,000円〜18,000円',
+                ageRange: '10歳〜18歳',
+                timeCommitment: '週1回 120分',
+                traits: ['creative', 'technology'],
+                difficulty: 'medium',
+                continuity_rate: 70,
+                future_potential: 'high',
+                affiliateBanners: [
+                    {
+                        title: 'DMM.make 3Dプリント教室',
+                        description: '3Dプリンタの基礎から応用まで学べる',
+                        imageUrl: 'https://via.placeholder.com/300x150/4f46e5/white?text=DMM.make',
+                        affiliateUrl: 'https://make.dmm.com/',
+                        price: '月額10,000円〜',
+                        features: ['機材レンタル', 'オンライン教材', '作品出力']
                     }
                 ],
             },
@@ -1611,7 +1675,17 @@
                 traits: ['cultural', 'perfectionist'],
                 difficulty: 'medium',
                 continuity_rate: 85,
-                future_potential: 'medium'
+                future_potential: 'medium',
+                affiliateBanners: [
+                    {
+                        title: '全日本剣道連盟 公認道場',
+                        description: '全国の剣道教室検索',
+                        imageUrl: 'https://via.placeholder.com/300x150/1e40af/white?text=剣道連盟',
+                        affiliateUrl: 'https://www.kendo.or.jp/',
+                        price: '月額6,000円〜',
+                        features: ['初心者歓迎', '段位取得', '大会参加']
+                    }
+                ]
             },
             karate: {
                 name: '空手',
@@ -1625,7 +1699,17 @@
                 traits: ['physical', 'perfectionist'],
                 difficulty: 'medium',
                 continuity_rate: 80,
-                future_potential: 'medium'
+                future_potential: 'medium',
+                affiliateBanners: [
+                    {
+                        title: '全日本空手道連盟',
+                        description: '公式空手教室情報',
+                        imageUrl: 'https://via.placeholder.com/300x150/ef4444/white?text=空手連盟',
+                        affiliateUrl: 'https://www.jkf.ne.jp/',
+                        price: '月額6,000円〜',
+                        features: ['昇級審査', '大会情報', '体験レッスン']
+                    }
+                ]
             },
             
             // 音楽系 (25種類) - 年齢範囲修正
@@ -1747,7 +1831,17 @@
                 traits: ['logical', 'creative'],
                 difficulty: 'medium',
                 continuity_rate: 75,
-                future_potential: 'very_high'
+                future_potential: 'very_high',
+                affiliateBanners: [
+                    {
+                        title: 'Tech Kids School',
+                        description: '小学生のためのプログラミングスクール',
+                        imageUrl: 'https://via.placeholder.com/300x150/3b82f6/white?text=Tech+Kids',
+                        affiliateUrl: 'https://techkidsschool.jp/',
+                        price: '月額9,900円〜',
+                        features: ['Scratch学習', '大会参加', '体験会']
+                    }
+                ]
             },
             english: {
                 name: '英会話',
@@ -1801,7 +1895,17 @@
                 traits: ['logical', 'perfectionist'],
                 difficulty: 'medium',
                 continuity_rate: 85,
-                future_potential: 'medium'
+                future_potential: 'medium',
+                affiliateBanners: [
+                    {
+                        title: '日本珠算連盟',
+                        description: '全国のそろばん教室を紹介',
+                        imageUrl: 'https://via.placeholder.com/300x150/f59e0b/white?text=珠算連盟',
+                        affiliateUrl: 'https://www.soroban.or.jp/',
+                        price: '月額4,000円〜',
+                        features: ['段位取得', '競技大会', '無料体験']
+                    }
+                ]
             },
             
             // 芸術・創作系 (20種類) - 年齢範囲修正
@@ -1858,6 +1962,30 @@
                         affiliateUrl: 'https://www.tougei-kobo.com/',
                         price: '月額8,000円〜',
                         features: ['道具レンタル', '少人数制', '体験レッスン']
+                    }
+                ],
+            },
+            photography: {
+                name: '写真教室',
+                description: 'カメラの基礎から撮影テクニックを学ぶ',
+                category: 'art',
+                icon: 'fas fa-camera',
+                benefits: ['構図力', '観察力', '表現力', '技術力'],
+                cost: '月額6,000円〜12,000円',
+                ageRange: '10歳〜18歳',
+                timeCommitment: '週1回 90分',
+                traits: ['creative', 'visual'],
+                difficulty: 'medium',
+                continuity_rate: 70,
+                future_potential: 'medium',
+                affiliateBanners: [
+                    {
+                        title: '東京写真学園',
+                        description: '初心者向け写真講座が充実',
+                        imageUrl: 'https://via.placeholder.com/300x150/0ea5e9/white?text=TPA',
+                        affiliateUrl: 'https://www.tpa-japan.com/',
+                        price: '月額6,000円〜',
+                        features: ['機材レンタル', '屋外撮影', '個別指導']
                     }
                 ],
             },
