スタートボタンのスタイルを更新し、ポインターイベントを有効にしました。

--- a/index.html
+++ b/index.html
@@ -162,6 +162,11 @@
             transform: translateY(-1px);
             box-shadow: 0 4px 8px rgba(102, 126, 234, 0.3);
         }
+        #start-btn {
+          pointer-events: auto !important;
+          z-index: 1000 !important;
+          position: relative;
+        }
     </style>
 </head>
 <body class="bg-gray-50 min-h-screen">
@@ -821,7 +826,7 @@
                 traits: ['creative', 'kinesthetic'],
                 difficulty: 'medium',
                 continuity_rate: 75,
-                future_potential: 'medium'
+                future_potential: 'medium',
                 affiliateBanners: [
                     {
                         title: 'Cookpad Do! 親子料理教室',
@@ -1521,7 +1526,7 @@
                 traits: ['physical', 'creative'],
                 difficulty: 'hard',
                 continuity_rate: 75,
-                future_potential: 'medium'
+                future_potential: 'medium',
                 affiliateBanners: [
                     {
                         title: 'Tokyo Parkour Academy',
@@ -1545,7 +1550,7 @@
                 traits: ['physical', 'logical'],
                 difficulty: 'medium',
                 continuity_rate: 80,
-                future_potential: 'medium'
+                future_potential: 'medium',
                 affiliateBanners: [
                     {
                         title: 'B-PUMP クライミングジム',
